force-app/main/default/objects/Intervention_SAV__c/Intervention_SAV__c.object-meta.xml
<CustomObject>
    <label>Intervention SAV</label>
    <nameField>
        <label>Intervention SAV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interventions SAV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>