force-app/main/default/objects/Intervention_SAV__c/fields/Artisan__c.field-meta.xml
<CustomField>
    <fullName>Artisan__c</fullName>
    <label>Artisan</label>
    <length>100</length>
    <type>Text</type>
</CustomField>