force-app/main/default/objects/Intervention_SAV__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Lien Master-Detail vers le Case Salesforce standard. Remplace l&apos;ancien champ Demande_SAV__c.</description>
    <label>Case SAV</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Interventions SAV</relationshipLabel>
    <relationshipName>Interventions_SAV</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>