force-app/main/default/objects/Intervention_SAV__c/fields/Date_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_Intervention__c</fullName>
    <label>Date Intervention</label>
    <type>DateTime</type>
</CustomField>