force-app/main/default/objects/Intervention_SAV__c/fields/Photos_URL__c.field-meta.xml
<CustomField>
    <fullName>Photos_URL__c</fullName>
    <label>Photos URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>