force-app/main/default/objects/Intervention_SAV__c/fields/Type_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Type_Intervention__c</fullName>
    <label>Type Intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reparation_Couture</fullName>
            </value>
            <value>
                <fullName>Renforcement_Couture</fullName>
            </value>
            <value>
                <fullName>Reparation_Fermeture_Eclair</fullName>
            </value>
            <value>
                <fullName>Remplacement_Fermeture_Eclair</fullName>
            </value>
            <value>
                <fullName>Reparation_Coin_Sac</fullName>
            </value>
            <value>
                <fullName>Reparation_Bordure_Cuir</fullName>
            </value>
            <value>
                <fullName>Traitement_Taches</fullName>
            </value>
            <value>
                <fullName>Retouche_Couleur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>